--- a/test_plugin.vcxproj
+++ b/test_plugin.vcxproj
@@ -140,13 +140,9 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Hook\KeyboardHookInstaller.cpp" />
-    <ClCompile Include="Hook\PatternDetector.cpp" />
-    <ClCompile Include="Hook\PipeHandler.cpp" />
-    <ClCompile Include="Hook\StringPatternDetector.cpp" />
-    <ClCompile Include="Hook\util.cpp" />
     <ClCompile Include="plugin.cpp" />
     <ClCompile Include="stdafx.cpp" />
+    <ClCompile Include="Wave\wave.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\include\plugin_definitions.h" />
@@ -157,14 +153,10 @@
     <ClInclude Include="..\include\teamspeak\public_errors_rare.h" />
     <ClInclude Include="..\include\teamspeak\public_rare_definitions.h" />
     <ClInclude Include="..\include\ts3_functions.h" />
-    <ClInclude Include="Hook\KeyboardHookInstaller.h" />
-    <ClInclude Include="Hook\PatternDetector.h" />
-    <ClInclude Include="Hook\PipeHandler.h" />
-    <ClInclude Include="Hook\StringPatternDetector.h" />
-    <ClInclude Include="Hook\util.h" />
     <ClInclude Include="plugin.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
+    <ClInclude Include="Wave\wave.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
