--- a/Plugin/test_plugin.vcxproj.filters
+++ b/Plugin/test_plugin.vcxproj.filters
@@ -71,6 +71,9 @@
     <ClInclude Include="Config.h">
       <Filter>Util</Filter>
     </ClInclude>
+    <ClInclude Include="resource.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="plugin.cpp">
@@ -88,5 +91,11 @@
     <ClCompile Include="Config.cpp">
       <Filter>Util</Filter>
     </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="test_plugin.rc" />
+  </ItemGroup>
+  <ItemGroup>
+    <Text Include="..\changelog.txt" />
   </ItemGroup>
 </Project>
