--- a/Plugin/test_plugin.vcxproj.filters
+++ b/Plugin/test_plugin.vcxproj.filters
@@ -27,6 +27,9 @@
     <Filter Include="App">
       <UniqueIdentifier>{e07e04af-7383-4841-ae09-fab1dd87d30c}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Gui">
+      <UniqueIdentifier>{b7f3cab1-2efc-4052-8b5a-67c6ae2e3930}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="plugin.h">
@@ -83,6 +86,9 @@
     <ClInclude Include="Wave\AudioClipSample.h">
       <Filter>Wave</Filter>
     </ClInclude>
+    <ClInclude Include="Gui\SettingsDialog.h">
+      <Filter>Gui</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="plugin.cpp">
@@ -108,6 +114,9 @@
     </ClCompile>
     <ClCompile Include="Wave\AudioClipSample.cpp">
       <Filter>Wave</Filter>
+    </ClCompile>
+    <ClCompile Include="Gui\SettingsDialog.cpp">
+      <Filter>Gui</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
