--- a/Plugin/test_plugin.vcxproj
+++ b/Plugin/test_plugin.vcxproj
@@ -141,6 +141,7 @@
       <WarningLevel>Level3</WarningLevel>
       <DebugInformationFormat>ProgramDatabase</DebugInformationFormat>
       <AdditionalIncludeDirectories>..\include;$(ProjectDir);%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <Optimization>MinSpace</Optimization>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -152,6 +153,7 @@
     <ClCompile Include="App\SoundplayerApp.cpp" />
     <ClCompile Include="Config.cpp" />
     <ClCompile Include="Gui\SettingsDialog.cpp" />
+    <ClCompile Include="Gui\SoundFolderSelector.cpp" />
     <ClCompile Include="plugin.cpp" />
     <ClCompile Include="stdafx.cpp" />
     <ClCompile Include="Util\Util.cpp" />
@@ -171,6 +173,7 @@
     <ClInclude Include="App\SoundplayerApp.h" />
     <ClInclude Include="Config.h" />
     <ClInclude Include="Gui\SettingsDialog.h" />
+    <ClInclude Include="Gui\SoundFolderSelector.h" />
     <ClInclude Include="plugin.h" />
     <ClInclude Include="resource.h" />
     <ClInclude Include="stdafx.h" />
@@ -194,4 +197,9 @@
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
+  <ProjectExtensions>
+    <VisualStudio>
+      <UserProperties RESOURCE_FILE="test_plugin.rc" />
+    </VisualStudio>
+  </ProjectExtensions>
 </Project>
