--- a/Plugin/test_plugin.vcxproj
+++ b/Plugin/test_plugin.vcxproj
@@ -156,6 +156,7 @@
     <ClCompile Include="Gui\PresetHotkeyGroup.cpp" />
     <ClCompile Include="Gui\SettingsDialog.cpp" />
     <ClCompile Include="Gui\SoundFolderSelector.cpp" />
+    <ClCompile Include="KeyboardHook\LocalKeyboardHookInstaller.cpp" />
     <ClCompile Include="plugin.cpp" />
     <ClCompile Include="stdafx.cpp" />
     <ClCompile Include="Util\HotkeyHandler.cpp" />
@@ -180,6 +181,7 @@
     <ClInclude Include="Gui\SettingsDialog.h" />
     <ClInclude Include="Gui\SoundFolderSelector.h" />
     <ClInclude Include="Gui\WindowUtil.h" />
+    <ClInclude Include="KeyboardHook\LocalKeyboardHookInstaller.h" />
     <ClInclude Include="plugin.h" />
     <ClInclude Include="resource.h" />
     <ClInclude Include="stdafx.h" />
