--- a/Plugin/test_plugin.vcxproj
+++ b/Plugin/test_plugin.vcxproj
@@ -71,25 +71,25 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <OutDir>$(SolutionDir)$(Platform)\$(Configuration)\</OutDir>
-    <IntDir>$(Platform)_$(Configuration)\</IntDir>
+    <IntDir>$(SolutionDir)Temp\$(Platform)_$(Configuration)\</IntDir>
     <TargetName>$(ProjectName)_$(Platform)</TargetName>
     <IncludePath>$(VC_IncludePath);$(WindowsSdk_71A_IncludePath);$(ProjectDir);$(SolutionDir);$(IncludePath);</IncludePath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <IncludePath>$(ProjectDir);$(SolutionDir);$(IncludePath);</IncludePath>
     <TargetName>$(ProjectName)_$(Platform)</TargetName>
-    <IntDir>$(Platform)_$(Configuration)\</IntDir>
+    <IntDir>$(SolutionDir)Temp\$(Platform)_$(Configuration)\</IntDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <OutDir>$(SolutionDir)$(Platform)\$(Configuration)\</OutDir>
-    <IntDir>$(Platform)_$(Configuration)\</IntDir>
+    <IntDir>$(SolutionDir)Temp\$(Platform)_$(Configuration)\</IntDir>
     <TargetName>$(ProjectName)_$(Platform)</TargetName>
     <IncludePath>$(VC_IncludePath);$(WindowsSdk_71A_IncludePath);$(ProjectDir);$(SolutionDir);$(IncludePath);</IncludePath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <IncludePath>$(ProjectDir);$(SolutionDir);$(IncludePath);</IncludePath>
     <TargetName>$(ProjectName)_$(Platform)</TargetName>
-    <IntDir>$(Platform)_$(Configuration)\</IntDir>
+    <IntDir>$(SolutionDir)Temp\$(Platform)_$(Configuration)\</IntDir>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
