-refractored ts sound playing
-new wave file loader, not perfect, but it can open some 8bit formats now
-no sound is play if there are multiple hits (hook mode)
-space and case ignored in finding files
- /q file -- enqueues a file (not tested)
-sends chat message max once in every 10 secs
-started api for sound distortion
-fixed fucked up piping NOTE: don't touch it unless you're rewriting it from scratch
-Logging is bit more friendly

--- a/Plugin/test_plugin.vcxproj
+++ b/Plugin/test_plugin.vcxproj
@@ -171,6 +171,7 @@
     <ClCompile Include="Util\Util.cpp" />
     <ClCompile Include="Wave\AudioClipSample.cpp" />
     <ClCompile Include="Wave\AudioDecoder.cpp" />
+    <ClCompile Include="Wave\AudioProcessor.cpp" />
     <ClCompile Include="Wave\wave.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -196,9 +197,11 @@
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
     <ClInclude Include="Util\HotkeyHandler.h" />
+    <ClInclude Include="Util\TSSoundPlayer.h" />
     <ClInclude Include="Util\Util.h" />
     <ClInclude Include="Wave\AudioClipSample.h" />
     <ClInclude Include="Wave\AudioDecoder.h" />
+    <ClInclude Include="Wave\AudioProcessor.h" />
     <ClInclude Include="Wave\wave.h" />
   </ItemGroup>
   <ItemGroup>
